Issue #174: Added house controller open api spec
