# service/src/main/java/com/myhome/controllers/request/AddHouseMemberRequest.java
@@ -1,33 +1,0 @@
-/*
- * Copyright 2020 Prathab Murugan
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
-package com.myhome.controllers.request;
-
-import com.myhome.controllers.dto.HouseMemberDto;
-import java.util.HashSet;
-import java.util.Set;
-import javax.validation.constraints.NotNull;
-import lombok.AllArgsConstructor;
-import lombok.Data;
-import lombok.NoArgsConstructor;
-
-@AllArgsConstructor
-@NoArgsConstructor
-@Data
-public class AddHouseMemberRequest {
-  @NotNull
-  private Set<HouseMemberDto> members = new HashSet<>();
-}
